# mortgage

./: .env  .env.prod.sample  .env.staging  .env.staging.sample  .gitignore  .replit  LOCAL_SETUP.md  README.md  SETUP.md  azure-pipelines.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  qs.md  replit.md  requirements.txt  script.js  test_filter.py  update_zip.py
app/server/: .dockerignore  .env.sample  Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml  uwm_config.json  vault.py
app/server/alembic/: env.py
app/server/alembic/versions/: 001_initial_auth_schema.py  (+3 more)
app/server/dependencies/: __init__.py  auth.py
app/server/models/: __init__.py  customer.py  password_reset.py  permission.py  pricing_quote.py  refresh_token.py  role.py  tenant.py  user.py
app/server/routers/: __init__.py  auth.py  customers.py  pricing.py  users.py  uwm.py
app/server/schemas/: __init__.py  auth.py  customer.py  pricing_quote.py  token.py  user.py  uwm.py
app/server/scripts/: seed_customers.py  seed_data.py
app/server/services/: __init__.py  auth_service.py  customer_service.py  oauth_service.py  password_service.py  pricing_service.py  rate_limit_service.py  token_service.py  user_service.py  uwm_auth_service.py  uwm_field_mapper.py
app/server/tests/: conftest.py  test_auth_endpoints.py  test_health.py  test_oauth_service.py  test_password_service.py  test_pricing.py  test_rate_limiting.py  test_token_service.py
server/: uwm.ts  (+3 more)
(+560 files in other folders)
